common/force-app/main/default/objects/Product2/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <inlineHelpText>The sector that this product operates in</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture and Farming</fullName>
            </value>
            <value>
                <fullName>Art and Design</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking and Finance</fullName>
            </value>
            <value>
                <fullName>Construction and Real Estate</fullName>
            </value>
            <value>
                <fullName>Defense and Aerospace</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy and Utilities</fullName>
            </value>
            <value>
                <fullName>Entertainment and Media</fullName>
            </value>
            <value>
                <fullName>Environmental and Waste Management</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Healthcare and Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Hospitality and Tourism</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology (IT)</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing and Advertising</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
            <value>
                <fullName>Retail and E-commerce</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Security Services</fullName>
            </value>
            <value>
                <fullName>Social Services</fullName>
            </value>
            <value>
                <fullName>Sport and Fitness</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation, Logistics and Mobility</fullName>
            </value>
            <value>
                <fullName>WealthTech</fullName>
                <isActive>false</isActive>
                <label>WealthTech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>