common/force-app/main/default/objects/Product2/fields/Sector_Personas__c.field-meta.xml
<CustomField>
    <fullName>Sector_Personas__c</fullName>
    <description>The personas that this product is suitable for</description>
    <label>Sector/Personas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Just Launchers</fullName>
            </value>
            <value>
                <fullName>Sharp Shooters</fullName>
            </value>
            <value>
                <fullName>Prosperity Builders</fullName>
            </value>
            <value>
                <fullName>Grand Designers</fullName>
            </value>
            <value>
                <fullName>Wholesale/Sophisticated Investors</fullName>
            </value>
            <value>
                <fullName>Retail Investors</fullName>
            </value>
            <value>
                <fullName>Property Investors</fullName>
            </value>
            <value>
                <fullName>ARE Auckland Real Estate Management - property and Asset managers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>