common/force-app/main/default/objects/Product2/fields/Secure_Parking_OF__c.field-meta.xml
<CustomField>
    <fullName>Secure_Parking_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Secure Parking</label>
    <type>Checkbox</type>
</CustomField>