common/force-app/main/default/objects/Product2/fields/Shared_Recreational_Areas_CB__c.field-meta.xml
<CustomField>
    <fullName>Shared_Recreational_Areas_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Shared Recreational Areas</label>
    <type>Checkbox</type>
</CustomField>