common/force-app/main/default/objects/Product2/fields/Shed_OF__c.field-meta.xml
<CustomField>
    <fullName>Shed_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Shed</label>
    <type>Checkbox</type>
</CustomField>