common/force-app/main/default/objects/Product2/fields/Solar_Hot_Water_EFF__c.field-meta.xml
<CustomField>
    <fullName>Solar_Hot_Water_EFF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eco Friendly Features</inlineHelpText>
    <label>Solar Hot Water</label>
    <type>Checkbox</type>
</CustomField>