common/force-app/main/default/objects/Product2/fields/Solar_Panels_EFF__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panels_EFF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eco Friendly Features</inlineHelpText>
    <label>Solar Panels</label>
    <type>Checkbox</type>
</CustomField>