common/force-app/main/default/objects/Product2/fields/Split_System_Heating_HC__c.field-meta.xml
<CustomField>
    <fullName>Split_System_Heating_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Split-System Heating</label>
    <type>Checkbox</type>
</CustomField>