common/force-app/main/default/objects/Product2/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ventures - Pre-Seed</fullName>
            </value>
            <value>
                <fullName>Ventures - Seed</fullName>
            </value>
            <value>
                <fullName>Ventures - Series A</fullName>
            </value>
            <value>
                <fullName>Ventures - Series B</fullName>
            </value>
            <value>
                <fullName>Ventures - Series C</fullName>
            </value>
            <value>
                <fullName>Ventures - Bridging Round</fullName>
            </value>
            <value>
                <fullName>Ventures - Pre-IPO</fullName>
            </value>
            <value>
                <fullName>Ventures - IPO</fullName>
            </value>
            <value>
                <fullName>Property - Equity</fullName>
            </value>
            <value>
                <fullName>Property - Preference Equity</fullName>
            </value>
            <value>
                <fullName>Property - Debt</fullName>
            </value>
            <value>
                <fullName>Fund - Multi Stage as per IM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>