common/force-app/main/default/objects/Product2/fields/Statement_of_Information__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Information__c</fullName>
    <label>Statement of Information</label>
    <type>Url</type>
</CustomField>