common/force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Expression Of Interest</fullName>
            </value>
            <value>
                <fullName>Sold Out</fullName>
            </value>
            <value>
                <fullName>Reserved for Display Home</fullName>
            </value>
            <value>
                <fullName>Reserved for Put and Call</fullName>
            </value>
            <value>
                <fullName>Reserved for builder house and land package</fullName>
            </value>
            <value>
                <fullName>Contract Executed</fullName>
                <isActive>false</isActive>
                <label>Contract Executed</label>
            </value>
            <value>
                <fullName>Contract Pending</fullName>
                <isActive>false</isActive>
                <label>Contract Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>