common/force-app/main/default/objects/Product2/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <label>Suburb</label>
    <length>25</length>
    <type>Text</type>
</CustomField>