common/force-app/main/default/objects/Product2/fields/Summary_Doc__c.field-meta.xml
<CustomField>
    <fullName>Summary_Doc__c</fullName>
    <description>Final approved version</description>
    <label>Summary Doc</label>
    <type>Url</type>
</CustomField>