common/force-app/main/default/objects/Product2/fields/Summary_of_the_product__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_the_product__c</fullName>
    <label>Summary of the product</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>