common/force-app/main/default/objects/Product2/fields/Swimming_Pool_CB__c.field-meta.xml
<CustomField>
    <fullName>Swimming_Pool_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Swimming Pool</label>
    <type>Checkbox</type>
</CustomField>