common/force-app/main/default/objects/Product2/fields/Swimming_Pool_Inground_OF__c.field-meta.xml
<CustomField>
    <fullName>Swimming_Pool_Inground_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Swimming Pool- Inground</label>
    <type>Checkbox</type>
</CustomField>