common/force-app/main/default/objects/Product2/fields/Syndicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Syndicate_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syndicate Lead</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Syndicate Lead)</relationshipLabel>
    <relationshipName>Products5</relationshipName>
    <type>Lookup</type>
</CustomField>