common/force-app/main/default/objects/Product2/fields/Target_Market_Determination__c.field-meta.xml
<CustomField>
    <fullName>Target_Market_Determination__c</fullName>
    <label>Target Market Determination</label>
    <type>Url</type>
</CustomField>