common/force-app/main/default/objects/Product2/fields/Temp_Total_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Temp_Total_Opp_Amount__c</fullName>
    <label>Temp Total Opp Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>