common/force-app/main/default/objects/Product2/fields/Tennis_Court_CB__c.field-meta.xml
<CustomField>
    <fullName>Tennis_Court_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Tennis Court</label>
    <type>Checkbox</type>
</CustomField>