common/force-app/main/default/objects/Product2/fields/Term_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Term_Expiry__c</fullName>
    <defaultValue>(&quot;Undefined&quot;)</defaultValue>
    <label>Term/Expiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
                <isActive>false</isActive>
                <label>3 Years</label>
            </value>
            <value>
                <fullName>4 Years</fullName>
                <isActive>false</isActive>
                <label>4 Years</label>
            </value>
            <value>
                <fullName>5 Years</fullName>
                <isActive>false</isActive>
                <label>5 Years</label>
            </value>
            <value>
                <fullName>9 Months</fullName>
                <isActive>false</isActive>
                <label>9 Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>