common/force-app/main/default/objects/Product2/fields/Terms_Expiry_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Terms_Expiry_in_Months__c</fullName>
    <formula>CASE( Term_Expiry__c ,&apos;3 Months&apos;,3, 
&apos;6 Months&apos;,6,
&apos;12 Months&apos;, 12,
&apos;18 Months&apos;,18,
&apos;24 Months&apos;,24,
&apos;3 Years&apos;,36,
&apos;4 Years&apos;, 48,
&apos;5 Years&apos;, 60, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms/Expiry in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>