common/force-app/main/default/objects/Product2/fields/Terms_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Service__c</fullName>
    <label>Terms of Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>