common/force-app/main/default/objects/Product2/fields/The_Offer__c.field-meta.xml
<CustomField>
    <fullName>The_Offer__c</fullName>
    <label>The Offer</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>