common/force-app/main/default/objects/Product2/fields/Tile_Banner__c.field-meta.xml
<CustomField>
    <fullName>Tile_Banner__c</fullName>
    <label>Tile Banner</label>
    <type>Url</type>
</CustomField>