common/force-app/main/default/objects/Product2/fields/Tile_Heading__c.field-meta.xml
<CustomField>
    <fullName>Tile_Heading__c</fullName>
    <label>Tile Heading</label>
    <length>250</length>
    <type>Text</type>
</CustomField>