common/force-app/main/default/objects/Product2/fields/Tile_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Tile_Offer_Type__c</fullName>
    <label>Tile Offer Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>