common/force-app/main/default/objects/Product2/fields/Tile_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Tile_Ordering__c</fullName>
    <label>Tile Ordering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>