common/force-app/main/default/objects/Product2/fields/TMDD__c.field-meta.xml
<CustomField>
    <fullName>TMDD__c</fullName>
    <inlineHelpText>Retail MIS</inlineHelpText>
    <label>TMDD</label>
    <type>Url</type>
</CustomField>