common/force-app/main/default/objects/Product2/fields/Total_Closed_WON_Opps__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_WON_Opps__c</fullName>
    <label>Total Closed WON Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>