common/force-app/main/default/objects/Product2/fields/Total_Opp_Unit_Cert_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Unit_Cert_Amount__c</fullName>
    <inlineHelpText>Total of Unit Cert Amount for the Closed WON Opps</inlineHelpText>
    <label>Total Opp Unit Cert Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>