common/force-app/main/default/objects/Product2/fields/Total_Sales_Rep_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Rep_Commission__c</fullName>
    <formula>Sales_Commission_Rate_c__c * Gross_SPV_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Rep Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>