common/force-app/main/default/objects/Product2/fields/Trust_Deed_Link__c.field-meta.xml
<CustomField>
    <fullName>Trust_Deed_Link__c</fullName>
    <label>Trust Deed Link</label>
    <type>Url</type>
</CustomField>