common/force-app/main/default/objects/Product2/fields/Trust_Deed_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Deed_Name__c</fullName>
    <inlineHelpText>When filling this field you MUST ensure it is formatted like this &quot; Trust No. 055&quot; OR &quot;Trust No. 055 A&quot; The spaces and grammar are relied upon by other processes.</inlineHelpText>
    <label>Trust Deed Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>