common/force-app/main/default/objects/Product2/fields/Trust_Deed_Text__c.field-meta.xml
<CustomField>
    <fullName>Trust_Deed_Text__c</fullName>
    <defaultValue>&apos;The deed entered into by the Trustee (as amended) establishing the Trust, the terms of which are set out in the Schedule to this Investment Contract.&apos;</defaultValue>
    <description>this field is utilised on the contract modal</description>
    <inlineHelpText>this field is utilised on the contract modal</inlineHelpText>
    <label>Trust Deed Text</label>
    <type>TextArea</type>
</CustomField>