common/force-app/main/default/objects/Product2/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <defaultValue>&apos;VentureCrowd Nominees Pty Ltd (ACN 166 599 140)&apos;</defaultValue>
    <description>this field is utilised on the contract modal</description>
    <inlineHelpText>this field is utilised on the contract modal</inlineHelpText>
    <label>Trustee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>