common/force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC Product</fullName>
            </value>
            <value>
                <fullName>Property Product</fullName>
            </value>
            <value>
                <fullName>CSF Product</fullName>
            </value>
            <value>
                <fullName>CSF Nominee</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>PSP Product</fullName>
            </value>
            <value>
                <fullName>Retail IPO</fullName>
            </value>
            <value>
                <fullName>Retail MIS</fullName>
            </value>
            <value>
                <fullName>Vest</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>