common/force-app/main/default/objects/Product2/fields/Type_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Interest__c</fullName>
    <label>Class of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Class Units</fullName>
            </value>
            <value>
                <fullName>B Class Units</fullName>
            </value>
            <value>
                <fullName>C Class Units</fullName>
            </value>
            <value>
                <fullName>D Class Units</fullName>
            </value>
            <value>
                <fullName>E Class Units</fullName>
            </value>
            <value>
                <fullName>F Class Units</fullName>
            </value>
            <value>
                <fullName>G Class Units</fullName>
            </value>
            <value>
                <fullName>Ordinary Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>