common/force-app/main/default/objects/Product2/fields/Type_of_Interest_n__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Interest_n__c</fullName>
    <inlineHelpText>The security the Investor will hold directly.</inlineHelpText>
    <label>Investor Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>Promissory Note</fullName>
            </value>
            <value>
                <fullName>Preference Shares</fullName>
            </value>
            <value>
                <fullName>Secured Loan</fullName>
            </value>
            <value>
                <fullName>Ordinary Shares</fullName>
            </value>
            <value>
                <fullName>Units in a MIS</fullName>
            </value>
            <value>
                <fullName>SAFE Note</fullName>
            </value>
            <value>
                <fullName>Interests in a Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Tax Deductible Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>