common/force-app/main/default/objects/Product2/fields/Unit_Holder_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Unit_Holder_Proportion__c</fullName>
    <defaultValue>&apos;100% minus the VentureCrowd Proportion&apos;</defaultValue>
    <description>this field is utilised on contract modal</description>
    <inlineHelpText>this field is utilised on contract modal</inlineHelpText>
    <label>Unit Holder Proportion</label>
    <type>TextArea</type>
</CustomField>