common/force-app/main/default/objects/Product2/fields/Valuation_Report__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Report__c</fullName>
    <label>Valuation Report</label>
    <type>Url</type>
</CustomField>