common/force-app/main/default/objects/Product2/fields/VC_Google_File_Drive__c.field-meta.xml
<CustomField>
    <fullName>VC_Google_File_Drive__c</fullName>
    <label>VC Google File Drive</label>
    <type>Url</type>
</CustomField>