common/force-app/main/default/objects/Product2/fields/VC_Link__c.field-meta.xml
<CustomField>
    <fullName>VC_Link__c</fullName>
    <inlineHelpText>Link to listing on VentureCrwd website</inlineHelpText>
    <label>VC Link</label>
    <type>Url</type>
</CustomField>