common/force-app/main/default/objects/Product2/fields/VentureCrowd__c.field-meta.xml
<CustomField>
    <fullName>VentureCrowd__c</fullName>
    <defaultValue>&apos;VentureCrowd Pty Ltd (ACN 166 598 849)&apos;</defaultValue>
    <label>VentureCrowd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>