common/force-app/main/default/objects/Product2/fields/VentureCrowd_Fee_Text__c.field-meta.xml
<CustomField>
    <fullName>VentureCrowd_Fee_Text__c</fullName>
    <description>this field is utilised in contract modal</description>
    <inlineHelpText>this field is utilised in contract modal</inlineHelpText>
    <label>VentureCrowd Fee Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>