common/force-app/main/default/objects/Product2/fields/VentureCrowd_Group__c.field-meta.xml
<CustomField>
    <fullName>VentureCrowd_Group__c</fullName>
    <defaultValue>&apos;VentureCrowd and its wholly owned subsidiaries including VentureCrowd Pty Ltd (ACN 166 598 849) and VentureCrowd Nominees Pty Ltd (ACN 166 599 140)&apos;</defaultValue>
    <description>this field is utilised on the contract modal</description>
    <inlineHelpText>this field is utilised on the contract modal</inlineHelpText>
    <label>VentureCrowd Group</label>
    <type>TextArea</type>
</CustomField>