common/force-app/main/default/objects/Product2/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <type>Url</type>
</CustomField>