common/force-app/main/default/objects/Product2/fields/Water_Rates__c.field-meta.xml
<CustomField>
    <fullName>Water_Rates__c</fullName>
    <label>Water Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>