common/force-app/main/default/objects/Product2/fields/Water_Tank_EFF__c.field-meta.xml
<CustomField>
    <fullName>Water_Tank_EFF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eco Friendly Features</inlineHelpText>
    <label>Water Tank</label>
    <type>Checkbox</type>
</CustomField>