common/force-app/main/default/objects/Product2/fields/Wholesale_Direct__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wholesale Direct</label>
    <type>Checkbox</type>
</CustomField>