common/force-app/main/default/objects/Product2/fields/yielding__c.field-meta.xml
<CustomField>
    <fullName>yielding__c</fullName>
    <inlineHelpText>Select the view that is most appropriate for the type of product</inlineHelpText>
    <label>Yielding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capitalised</fullName>
            </value>
            <value>
                <fullName>Compounding</fullName>
            </value>
            <value>
                <fullName>Distributions owing</fullName>
            </value>
            <value>
                <fullName>No distributions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>