common/force-app/main/default/objects/Product2/recordTypes/Founders.recordType-meta.xml
<RecordType>
    <fullName>Founders</fullName>
    <active>true</active>
    <description>Founder Products</description>
    <label>Founders</label>
</RecordType>