common/force-app/main/default/objects/Product2/recordTypes/VC_Product.recordType-meta.xml
<RecordType>
    <fullName>VC_Product</fullName>
    <active>true</active>
    <description>VentureCrowd Products</description>
    <label>VC</label>
</RecordType>