common/force-app/main/default/objects/Product2/recordTypes/VCPP.recordType-meta.xml
<RecordType>
    <fullName>VCPP</fullName>
    <active>true</active>
    <description>VentureCrowd Property Projects</description>
    <label>VCPP</label>
</RecordType>