common/force-app/main/default/objects/Product2/validationRules/Body_Corporate.validationRule-meta.xml
<ValidationRule>
    <fullName>Body_Corporate</fullName>
    <active>true</active>
    <description>If Body Corporate is TRUE then Body Corporate Fee needs to be Filled.</description>
    <errorConditionFormula>AND (Body_Corporate__c = TRUE, ISBLANK( Body_Corporate_Fee__c ))</errorConditionFormula>
    <errorDisplayField>Body_Corporate_Fee__c</errorDisplayField>
    <errorMessage>Please Enter Body Corporate Fee</errorMessage>
</ValidationRule>