common/force-app/main/default/objects/Product2/validationRules/Check_If_Raise_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Raise_Exist</fullName>
    <active>true</active>
    <description>If a Raise exists, this field is not required. Otherwise, the user will need to fill in this field</description>
    <errorConditionFormula>AND(
    RecordType.Name &lt;&gt; &quot;Founders&quot;,
    ISBLANK(Raise__c),
    ISBLANK(Tile_Banner__c)
)</errorConditionFormula>
    <errorDisplayField>Tile_Banner__c</errorDisplayField>
    <errorMessage>You can not have an empty Tile Banner</errorMessage>
</ValidationRule>