common/force-app/main/default/objects/Product2/listViews/All_Products_With_Display_URL.listView-meta.xml
<ListView>
    <fullName>All_Products_With_Display_URL</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DISPLAY_URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.DISPLAY_URL</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Products With Display URL</label>
</ListView>