common/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Type__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Investment_Product_Type__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Publish_on_Community_Site__c</columns>
    <columns>PRODUCT2.DISPLAY_URL</columns>
    <columns>Offer_Launch_Date__c</columns>
    <columns>Product_Dashboard__c</columns>
    <columns>Investment_Contract_Text__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>