common/force-app/main/default/objects/Product2/listViews/Cornerstone_Village_Stock_List.listView-meta.xml
<ListView>
    <fullName>Cornerstone_Village_Stock_List</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Masterplan__c</columns>
    <columns>Status__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>CSV</value>
    </filters>
    <label>Cornerstone Village Stock List</label>
</ListView>